src/scss/components/_buttons.scss
@import '../helpers/_variables.scss';
@import '../helpers/_mixins.scss';

.btn-underlined-selector { //required for addtocart buttons in table. Rest styles
    .btn:not(add) {
        &.cartbtn:before {
            content: ''!important;
        }    
    }
    .btn, .btn, a:not([href]):not([tabindex]):not([data-ng-attr-id]) {
        text-decoration: underline;
        border: 0;
        background: none;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        text-rendering: optimizeLegibility;
        overflow-y: hidden;
        &.cartbtn::after {
            display: inline-block;
            font-size: 2rem;
            // font-family: "Font Awesome 5 Brands"; 
            font-weight: 900;
            text-decoration: none;
            margin: 0 0 0 10px;
            vertical-align:middle;
        }
        &.cartbtn.add::after {
            // content: "\f291";
            color: $green;      
        }
        &.cartbtn.remove::after {
            // content: "\f291";
            color: $red;      
        }    
        &.cartbtn:hover::after {
            text-shadow: 0 0 2px $grey;
        }
        &:focus {
            outline: 0;
        }
        &:hover {
            text-decoration: none;
        }
        &.btn--green, &.btn--red, .btn--lg {
            padding: 0;
            color: $green;
            background: none;
            text-transform: capitalize; 
            -webkit-box-shadow: 0 0 0 0;
            -moz-box-shadow: 0 0 0 0;
            box-shadow: 0 0 0 0;        
        }
        &:not([disabled]):hover, &:not([disabled]):focus  {
            box-shadow: none;
        }    
    }
}

.tablebtn {
    button.btn.btn--lg {
        padding: 0 2.15rem!important;
        font-size: 1.2rem;
        font-weight: 500;
    }
}
.btn, a:not([href]):not([tabindex]):not([data-ng-attr-id]) {
    font-size: $font-normal;  
    font-weight: 500;
    color: $grey-dark;
    -webkit-transition: background .3s ease-in-out, box-shadow .3s ease-in-out;
    -o-transition: background .3s ease-in-out, box-shadow .3s ease-in-out;
    transition: background .3s ease-in-out, box-shadow .3s ease-in-out;
    overflow-x: hidden;
    overflow-y: hidden;
    &.btn--box-shadow {
        -webkit-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);
        -moz-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);
        box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);  
    }
    &.btn--lg { 
        @include padding-mixin(1rem 2.15rem);  
        font-weight: bold; 
        letter-spacing: 0.5px; 
        font-size: 1rem; 
        // text-transform: uppercase; 
        -webkit-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);
        -moz-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);
        box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);  
    } 
    &.btn-help-outer {
        position: relative;
        height: 40px;
        width: 40px;
    }
    &.btn-help-outer {
        height: 40px;
        width: 40px;
    }    
    &.btn-help {
        height: 40px;
        width: 40px;
        border-radius: 50%;
        background: $green;
        color: $white;
        -webkit-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);
        -moz-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);
        box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.2);  
        position: fixed;
        right: 2%;
        bottom: 2%;
    }
    &.btn--plain {
        background: $white;
        border: 1px solid $border;
    }
    &.btn--green, {
        background: $green;
        color: $white;
    }  
    &.btn--red {
        background: $red;
        color: $white;
    }
    &.btn--grey {
        background: $grey-dark;
        color: $white;
    }  
    &:not([disabled]):hover, &:not([disabled]):focus  {
        -webkit-box-shadow: 0 0 0 0 rgba(0,0,0,0);
        -moz-box-shadow: 0 0 0 0 rgba(0,0,0,0);    
        box-shadow: 0 0 0 0 rgba(0,0,0,0);
    }
    &.btn-no-bg {
        background: none;
        border: 0;
        &:focus {
            outline: 0;
        }
        &:not([disabled]):hover {
            .action-icon {
                opacity: .8
            }
        }
    }

    &.btn-underlined {
        text-decoration: underline;
        vertical-align: baseline;
        &:hover, &:focus {
            box-shadow: none;
            text-decoration: none;
        }
    }

    &.btn-file-upload {
        max-width: 12rem;
        text-overflow: ellipsis;
        position: relative;
        .btn-close {
            position: absolute;
            top: 50%;
            margin-top: -6px;
            right: 8px;
        }
    }
}


.t-data .t-data__btn-portal { min-width: 183.48px; } //required from ngCart

.btn-underlined {
    cursor: pointer;
    text-decoration: underline;
    background: transparent;
    &:hover {
        text-decoration: none;
    }
}

.btn--bordered {
    background: none;
    &.green {
        border: 2px solid $green;
        color: $green;
        &:not([disabled]):hover {
            background: $green;
            color: $white;
        }
        &.txt-black {
            color: $black;
        }
    }
    &.grey {
        border: 2px solid $grey-dark;
        color: $grey-dark;
        &:not([disabled]):hover {
            background: $grey-dark;
            color: $white;
        }
        &.txt-grey {
            color: $grey-dark;
        }
    }
}

.help-panel__item {
    cursor: pointer;
    &:hover {
        background: $grey;
    }
}

.queston-btn {
    background: $grey-dark;
    padding: .725rem;
    border-radius: 50%;
    color: #fff;
    margin-right: 1.25rem;
    border: none;
    height: 2.75rem;
    width: 2.75rem;  
    &[disabled] {
        background: $grey;
        color: $grey-dark
    }
    &:last-child {
        margin-right: 0
    }
}

.question-direction {
    border: none;
    background: none;
}

.icon-stretch {
    cursor: pointer;    
    font-size: 1.2rem;
    line-height: 1.5rem;
    min-height: 1px;
    position: relative;
    transition: all ease-in-out .25s;
    text-align: right;
    box-sizing: content-box;
    &.icon-stretch--icon {
        background: white;
        min-width: 2.2rem;
        width: 2.2rem;
        height: 3.4rem;
        color: $grey-dark;
        &.black {
            .icon {
                margin-right: 5px;
            }
            &:not([disabled]):hover {
                background: $grey-dark;
                color: $white;
                width: 9rem;
                .icon-text {
                    opacity: 1;
                    right: 4rem;
                }
            }
            .fa-2x {
                font-size: 1.85rem;
            }   
        }
        &.green {
            background: $green;
            color: $white;
            .icon {
                margin-right: 2px;
            }
            &:not([disabled]):hover {
                width: 11rem;
                .icon-text {
                    opacity: 1;
                    right: 3.4rem;
                }

            }        
        }        
    }
    &.icon-stretch--stack {
        width: 3rem;
        &.green {
            background: $green;
            color: $white;
            &:not([disabled]):hover {
                width: 10rem;
                .icon-text {
                    opacity: 1;
                    right: 5.3rem;
                }
            }        
        }
    }    

    .icon-text {
        color: $white;
        font-size: 1.2rem;
        font-weight: medium;
        opacity: 0;
        position: absolute;
        right: 0;
        top: 9px;
        transition: all ease-in-out .25s;
        transition-delay: .25s;
        text-transform: capitalize;
    }
}

